# review

./: README.md  movie_review.sql  package-lock.json
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/admin/: login.rs  mod.rs  movie.rs  view.rs
backend/src/images/: index.html
backend/src/members/: mod.rs  register.rs  update.rs  user_api.rs
backend/src/reviews/: mod.rs  movie.rs  new.rs  review.rs
frontnd/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.js
frontnd/src/: app.html  body.css  login.css  style.css
frontnd/src/routes/: +page.svelte  HeaderComp.svelte
frontnd/src/routes/admin/: +page.svelte  body.css  dashboard.svelte
frontnd/src/routes/admin/edit-movie/: +page.svelte
frontnd/src/routes/admin/home/: +page.svelte  MovieDetails.svelte
frontnd/src/routes/admin/logout/: +page.svelte
frontnd/src/routes/admin/review/: +page.svelte  review.js
frontnd/src/routes/admin/upload/: +page.svelte
frontnd/src/routes/admin/viewMovies/: +page.svelte
frontnd/src/routes/admin/viewUsers/: +page.svelte
frontnd/src/routes/login/: +page.svelte  check.js  cook.js
frontnd/src/routes/logout/: +page.svelte
frontnd/src/routes/movielist/: +page.svelte  MovieDetails.svelte
frontnd/src/routes/profile/: +page.svelte
frontnd/src/routes/register/: +page.svelte
frontnd/src/routes/review/: +page.svelte  review.js
frontnd/src/routes/upload/: +page.svelte
