[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version= "0.6.20", features = ["macros", "multipart"]}
dotenv = "0.15.0"
serde = "1.0.204"
sqlx = { version = "0.6", features = ["mysql", "json", "bigdecimal", "runtime-actix-native-tls","macros"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors",  "fs"] }
anyhow = "1.0.86"
